--- a/mavenproject1/pom.xml
+++ b/mavenproject1/pom.xml
@@ -1,38 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mycompany</groupId>
-    <artifactId>mavenproject1</artifactId>
+    <groupId>cz.applifting</groupId>
+    <artifactId>GunClient</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <repositories>        
+    <packaging>jar</packaging>
+    <repositories>
         <repository>
             <id>atlassian-public</id>
-            <url>https://maven.atlassian.com/repository/public</url>
+            <url>https://m2proxy.atlassian.com/repository/public</url>
             <snapshots>
                 <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
+                <updatePolicy>daily</updatePolicy>
                 <checksumPolicy>warn</checksumPolicy>
             </snapshots>
             <releases>
                 <enabled>true</enabled>
                 <checksumPolicy>warn</checksumPolicy>
             </releases>
-        </repository>      
+        </repository>
     </repositories>
-    
-    <dependencies>
-        
+    <dependencies>        
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-rest-java-client</artifactId>
-            <version>0.2-m1</version>
+            <version>2.0.0-m2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.jira</groupId>
+            <artifactId>jira-rest-java-client-api</artifactId>
+            <version>2.0.0-m25</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.jira.rest-java-client</groupId>
+            <artifactId>atlassian-jira-rest-java-client</artifactId>
+            <version>0.1-rc2</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
-    <packaging>jar</packaging>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-    <name>RemoteControlledRiffle</name>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>atlassian-public</id>
+            <url>https://m2proxy.atlassian.com/repository/public</url>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
