--- a/GunClient/pom.xml
+++ b/GunClient/pom.xml
@@ -20,7 +20,13 @@
             </releases>
         </repository>
     </repositories>
-    <dependencies>        
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>        
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-rest-java-client</artifactId>
