--- a/GunServer/nbproject/project.properties
+++ b/GunServer/nbproject/project.properties
@@ -29,22 +29,22 @@ dist.jar=${dist.dir}/GunServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.junit.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\junit.jar
-file.reference.pi4j-core-javadoc.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-core-javadoc.jar
-file.reference.pi4j-core-sources.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-core-sources.jar
-file.reference.pi4j-core.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-core.jar
-file.reference.pi4j-device-javadoc.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-device-javadoc.jar
-file.reference.pi4j-device-sources.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-device-sources.jar
-file.reference.pi4j-device.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-device.jar
-file.reference.pi4j-example-javadoc.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-example-javadoc.jar
-file.reference.pi4j-example-sources.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-example-sources.jar
-file.reference.pi4j-example.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-example.jar
-file.reference.pi4j-gpio-extension-javadoc.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-gpio-extension-javadoc.jar
-file.reference.pi4j-gpio-extension-sources.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-gpio-extension-sources.jar
-file.reference.pi4j-gpio-extension.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-gpio-extension.jar
-file.reference.pi4j-service-javadoc.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-service-javadoc.jar
-file.reference.pi4j-service-sources.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-service-sources.jar
-file.reference.pi4j-service.jar=C:\\Users\\Jitu\u0161ka zub\\Documents\\V\u0160\\2_SEMESTR\\PR2\\pi4j-1.0\\lib\\pi4j-service.jar
+file.reference.junit.jar=../pi4j-1.0/lib/junit.jar
+file.reference.pi4j-core-javadoc.jar=../pi4j-1.0/lib/pi4j-core-javadoc.jar
+file.reference.pi4j-core-sources.jar=../pi4j-1.0/lib/pi4j-core-sources.jar
+file.reference.pi4j-core.jar=../pi4j-1.0/lib/pi4j-core.jar
+file.reference.pi4j-device-javadoc.jar=../pi4j-1.0/lib/pi4j-device-javadoc.jar
+file.reference.pi4j-device-sources.jar=../pi4j-1.0/lib/pi4j-device-sources.jar
+file.reference.pi4j-device.jar=../pi4j-1.0/lib/pi4j-device.jar
+file.reference.pi4j-example-javadoc.jar=../pi4j-1.0/lib/pi4j-example-javadoc.jar
+file.reference.pi4j-example-sources.jar=../pi4j-1.0/lib/pi4j-example-sources.jar
+file.reference.pi4j-example.jar=../pi4j-1.0/lib/pi4j-example.jar
+file.reference.pi4j-gpio-extension-javadoc.jar=../pi4j-1.0/lib/pi4j-gpio-extension-javadoc.jar
+file.reference.pi4j-gpio-extension-sources.jar=../pi4j-1.0/lib/pi4j-gpio-extension-sources.jar
+file.reference.pi4j-gpio-extension.jar=../pi4j-1.0/lib/pi4j-gpio-extension.jar
+file.reference.pi4j-service-javadoc.jar=../pi4j-1.0/lib/pi4j-service-javadoc.jar
+file.reference.pi4j-service-sources.jar=../pi4j-1.0/lib/pi4j-service-sources.jar
+file.reference.pi4j-service.jar=../pi4j-1.0/lib/pi4j-service.jar
 includes=**
 jar.compress=false
 javac.classpath=\
